# File-Managare

./: CMakeLists.txt  README.md  file.c  file.h  main.c  window.c  window.h
common/: file.c  vector.c  window.c
editor/: editor.c
headers/: editor.h  file.h  manager.h  vector.h  window.h
manager/: main_manager.c  manager.c
src/: editor.c  file.c  main.c  main_editor.c  main_manager.c  manager.c  window.c
